--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
         </div>
       </section>
       <footer class="pt-3 pb-2">
-          <p class="text-center fw-bold">&copy; <span class="section-title fs-5">Restaurante do Chef João Costa</span> - Todos os direitos reservados - 2023</p>
+          <p class="text-center fw-bold">&copy; <span id="title-footer" class="section-title fs-5">Restaurante do Chef João Costa</span> - Todos os direitos reservados - 2023</p>
           <p class="text-center fw-bold">Desenvolvido por <span id="davidvilela">David Vilela</span></p>
       </footer>
     </div>
